--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,48 @@
 body {
-  background-color: #434;
+  font-family: "Inter", sans-serif;
+}
+
+.container {
+  max-width: 1700px;
+  width: 96%;
+  margin: auto;
+}
+
+.header {
+  padding-top: 80px;
+}
+.header-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-left, .header-right {
+  width: 50%;
+}
+.header-left {
+  display: flex;
+  justify-content: space-between;
+}
+.header-right {
+  display: flex;
+  justify-content: flex-end;
+}
+.header-menu {
+  cursor: pointer;
+}
+.header-menu__button {
+  background-color: #093CB5;
+  padding: 15px 25px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+}
+.header-menu__button span {
+  font-size: 30px;
+  color: #fff;
+  margin-left: 10px;
+}
+.header-icons img {
+  margin-left: 20px;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
